Avoid unnecessary copies (#302)
* Avoid unnecessary copies

Signed-off-by: Sven Strickroth <email@cs-ware.de>

* Update CssSchema.java

---------

Signed-off-by: Sven Strickroth <email@cs-ware.de>
Co-authored-by: Mike Samuel <mikesamuel@gmail.com>